--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "source",
-    "description": "A default theme for the Ghost publishing platform",
+    "name": "crimson",
+    "description": "A Ghost theme for Crimson Quill newspaper",
     "demo": "https://source.ghost.io",
-    "version": "1.4.1",
+    "version": "2.0.0",
     "engines": {
         "ghost": ">=5.0.0"
     },
@@ -36,10 +36,10 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Source.git"
+        "url": "https://github.com/da4089/Source.git"
     },
-    "bugs": "https://github.com/TryGhost/Source/issues",
-    "contributors": "https://github.com/TryGhost/Source/graphs/contributors",
+    "bugs": "https://github.com/da4089/Source/issues",
+    "contributors": "https://github.com/da4089/Source/graphs/contributors",
     "devDependencies": {
         "@tryghost/release-utils": "0.8.1",
         "autoprefixer": "10.4.7",
